--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,13 @@
     <title>WellnessLab</title>
 
 
-    <!-- CSS  -->
+    <!--
     <link href="min/plugin-min.css" type="text/css" rel="stylesheet">
     <link href="min/custom-min.css" type="text/css" rel="stylesheet" >
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script> CSS  -->
 
   </head>
   <body>
@@ -51,8 +51,8 @@
     -->
 
 
-    <!--  Scripts-->
+    <!--
     <script src="min/plugin-min.js"></script>
-    <script src="min/custom-min.js"></script>
+    <script src="min/custom-min.js"></script>  Scripts-->
   </body>
 </html>
